--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <div class="wrapper">
         <header>
+            <!-- КОМЕНТАР -->
             <nav class="main_align">
                 <ul class="nav_links">
                     <li><a href="#">Home</a></li>
