--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div class="wrapper">
         <header>
             <!-- КОМЕНТАР -->
+            <!-- КОМЕНТАР -->
+            <!-- КОМЕНТАР -->
             <nav class="main_align">
                 <ul class="nav_links">
                     <li><a href="#">Home</a></li>
