--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <!-- КОМЕНТАР -->
             <!-- КОМЕНТАР -->
             <nav class="main_align">
+                <!-- Changes in project -->
                 <ul class="nav_links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
